products docs - and update stuff
